frontend/cardgame/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cardgamefrontend
  namespace: frontend
  labels:
    app: cardgamefrontend
spec:
  ports:
  - port: 9010
    targetPort: 8080
    name: http
  clusterIP: None
  selector:
    app: cardgamefrontend
