frontend/cardgame/ingress_https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cardgamefrontend-ingress
  namespace: frontend
spec:
  tls:
  - hosts:
    - baojunev.com
    secretName: ingress-secret
  rules:
  - host: inventory2.baojunev.com
    http:
      paths:
      - path: /cardGame
        backend:
          serviceName: cardgamefrontend
          servicePort: 9010
  - host: inventory.baojunev.com
    http:
      paths:
      - path: /cardGame
        backend:
          serviceName: cardgamefrontend
          servicePort: 9010
